--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -523,6 +523,18 @@ img{
     width: 90%;
 }
 
+.skills__workday{
+    width: 90%;
+}
+
+.skills__peoplesoft{
+    width: 90%;
+}
+
+.skills__linkedin{
+    width: 90%;
+}
+
 .skills__ms_excel{
     width: 85%;
 }
